<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>Lahebo</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Lahebo</name>
  <url>http://maven.apache.org</url>
  <properties>
    <maven.compiler.source>20</maven.compiler.source>
    <maven.compiler.target>20</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <google.zxing.version>3.5.0</google.zxing.version>
    <log4j.version>2.18.0</log4j.version>
    <aerogear.version>1.0.0</aerogear.version>
    <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
    <extentreports.version>5.0.9</extentreports.version>
    <extentreports.version>5.0.9</extentreports.version>
    <apache-poi.version>5.2.2</apache-poi.version>
    <javafaker.version>1.0.2</javafaker.version>

    <allure-testng.version>2.19.0</allure-testng.version>
    <allure-maven.version>2.10.0</allure-maven.version>
    <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
    <allure.cmd.download.url>
      https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline
    </allure.cmd.download.url>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.8.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>5.4.1</version>
    </dependency>
    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>javax.mail-api</artifactId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.2</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>31.1-jre</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>4.11.0</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.3</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.jboss.aerogear/aerogear-otp-java -->
    <dependency>
      <groupId>org.jboss.aerogear</groupId>
      <artifactId>aerogear-otp-java</artifactId>
      <version>${aerogear.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.github.stephenc.monte/monte-screen-recorder -->
    <dependency>
      <groupId>com.github.stephenc.monte</groupId>
      <artifactId>monte-screen-recorder</artifactId>
      <version>${monte-screen-recorder.version}</version>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure-testng.version}</version>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-attachments</artifactId>
      <version>${allure-testng.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.automatedowl/allure-environment-writer -->
    <dependency>
      <groupId>com.github.automatedowl</groupId>
      <artifactId>allure-environment-writer</artifactId>
      <version>${allure-environment-writer.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
    <dependency>
      <groupId>com.aventstack</groupId>
      <artifactId>extentreports</artifactId>
      <version>${extentreports.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>${apache-poi.version}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${apache-poi.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.zxing/javase -->
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>${google.zxing.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>${google.zxing.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
    <dependency>
      <groupId>com.github.javafaker</groupId>
      <artifactId>javafaker</artifactId>
      <version>${javafaker.version}</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.22</version>
    </dependency>


  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>31.0.1-jre</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.2</version>
          <configuration>
            <suiteXmlFiles>
<!--              <suiteXmlFile>src/test/java/TestSuits/AddFromFile.xml</suiteXmlFile>-->
              <suiteXmlFile>src/test/java/TestSuits/AllSuites.xml</suiteXmlFile>
            </suiteXmlFiles>
              <forkCount>0</forkCount> <!-- changed this to 0 -->
              <reuseForks>false</reuseForks>
              <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
              <printSummary>true</printSummary>
              <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->

              <!-- run test in headless mode -->
              <systemPropertyVariables>
                <glass.platform>Monocle</glass.platform>
                <monocle.platform>Headless</monocle.platform>
                <prism.order>d3d</prism.order>
              </systemPropertyVariables>

              <argLine>
                --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
              </argLine>

          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
